--- a/FootballData/app/build.gradle
+++ b/FootballData/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.android.support:support-v4:24.1.0'
+    compile 'org.jetbrains:annotations-java5:15.0'
 }
