--- a/FootballData/app/src/main/AndroidManifest.xml
+++ b/FootballData/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".views.FixtureActivity"></activity>
+        <activity android:name=".views.FixtureActivity" />
+        <activity android:name=".views.TeamsActivity"></activity>
     </application>
 
 </manifest>
